1998-02-13  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-stock.c (gnome_stock_pixmap_widget_state_changed): Added
	gtk_widget_ref() when a new pixmap is created, because later they
	may get gtk_container_remove()d.
	(gnome_stock_pixmap_widget_size_request): Bad hack: if the pixmap
	window is NULL, we return a default size.  The gnome-stock
	architecture has to be rewritten, I think.  Please see my
	forthcoming post to gnome-list for a proposal on how to do this.

	* gnome-app.c: indentation fixes.

	* gnome-stock.c (build_hash_key): Made routine use g_copy_strings().

Fri Feb 13 19:03:21 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk-ted.c (gtk_ted_parse_pos): Initialize flags to zero before
	doing the parsing.

Fri Feb 13 18:23:02 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-messagebox.c: Message boxes now take a variable number of
	arguments instead of having 3 options at most. 

Fri Feb 13 18:09:46 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk-ted.c (gtk_ted_update_position): More refcouting joy.

Fri Feb 13 11:45:12 1998  Nuno Ferreira <nmrf@rnl.ist.utl.pt>

	* gnome-app.c (gnome_app_configure_positions): use app->toolbar
	when dealing with the toolbar, not app->menubar.

Wed Feb 11 15:06:05 1998  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk-ted.c (gtk_ted_widget_drop
	gtk_ted_prepare_editable_widget): refcouting fixes
